--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1010,8 +1010,8 @@ section .container {
   bottom: 0;
   padding: 15px;
   text-align: right;
-  font-size: 13px;
-  color: #fff;
+  font-size: 10px;
+  color: #8C8C8C;
   z-index: 999999;
 }
 @media (max-width: 992px) {
