--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1010,8 +1010,8 @@ section .container {
   bottom: 0;
   padding: 15px;
   text-align: right;
-  font-size: 10px;
-  color: #8C8C8C;
+  font-size: 14px;
+  color: #DCDCDC;
   z-index: 999999;
 }
 @media (max-width: 992px) {
@@ -1026,5 +1026,5 @@ section .container {
   transition: 0.3s;
 }
 .credits a:hover {
-  color: #fff;
+  color: #009B48;
 }
