--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1022,9 +1022,9 @@ section .container {
   }
 }
 .credits a {
-  color: #18d26e;
+  color: #3DDB59;
   transition: 0.3s;
 }
 .credits a:hover {
-  color: #009B48;
+  color: #35e888;
 }
