--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,12 @@ body::before {
 }
 
 a {
-    color: #3DDB59;
+    color: #dc3545;
     text-decoration: none;
 }
 
 a:hover {
-    color: #35e888;
+    color: #f30017;
     text-decoration: none;
 }
 
@@ -98,7 +98,7 @@ h6 {
 
 #header h2 span {
     color: #FFFFFF;
-    border-bottom: 2px solid #18d26e;
+    border-bottom: 1px solid #dc3545;
     padding-bottom: 6px;
 }
 
@@ -127,7 +127,7 @@ h6 {
 }
 
 #header .social-links a:hover {
-    background: #18d26e;
+    background: #dc3545;
 }
 
 @media (max-width: 992px) {
@@ -247,7 +247,7 @@ h6 {
     height: 2px;
     bottom: -4px;
     left: 0;
-    background-color: #18d26e;
+    background-color: #dc3545;
     visibility: hidden;
     width: 0px;
     transition: all 0.3s ease-in-out 0s;
@@ -393,7 +393,7 @@ section .container {
     width: 120px;
     height: 1px;
     display: inline-block;
-    background: #4ceb95;
+    background: #dc3545;
     margin: 4px 10px;
 }
 
@@ -415,7 +415,7 @@ section .container {
 .about-me .content h3 {
     font-weight: 700;
     font-size: 26px;
-    color: #18d26e;
+    color: #dc3545;
 }
 
 .about-me .content ul {
@@ -436,7 +436,7 @@ section .container {
 .about-me .content ul i {
     font-size: 16px;
     margin-right: 5px;
-    color: #18d26e;
+    color: #dc3545;
     line-height: 0;
 }
 
@@ -469,7 +469,7 @@ section .container {
     font-size: 24px;
     background: rgba(255, 255, 255, 0.1);
     padding: 12px;
-    color: #18d26e;
+    color: #dc3545;
     border-radius: 50px;
     line-height: 0;
 }
@@ -523,7 +523,7 @@ section .container {
     width: 1px;
     height: 10px;
     transition: 0.9s;
-    background-color: #18d26e;
+    background-color: #dc3545;
 }
 
 
@@ -638,7 +638,7 @@ section .container {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #18d26e;
+    background-color: #dc3545;
 }
 
 
@@ -667,7 +667,7 @@ section .container {
     font-weight: 600;
     text-transform: uppercase;
     font-family: "Poppins", sans-serif;
-    color: #18d26e;
+    color: #dc3545;
     margin-bottom: 10px;
 }
 
@@ -700,8 +700,8 @@ section .container {
     border-radius: 50px;
     left: -9px;
     top: 0;
-    background: #18d26e;
-    border: 2px solid #18d26e;
+    background: #dc3545;
+    border: 2px solid #dc3545;
 }
 
 
@@ -720,7 +720,7 @@ section .container {
     margin: 0 auto;
     width: 64px;
     height: 64px;
-    background: #18d26e;
+    background: #dc3545;
     border-radius: 5px;
     transition: all 0.3s ease-out 0s;
     display: flex;
@@ -765,8 +765,8 @@ section .container {
 }
 
 .services .icon-box:hover {
-    background: #18d26e;
-    border-color: #18d26e;
+    background: #dc3545;
+    border-color: #dc3545;
 }
 
 .services .icon-box:hover .icon {
@@ -774,11 +774,11 @@ section .container {
 }
 
 .services .icon-box:hover .icon i {
-    color: #18d26e;
+    color: #dc3545;
 }
 
 .services .icon-box:hover .icon::before {
-    background: #35e888;
+    background: #f30017;
 }
 
 .services .icon-box:hover h4 a,
@@ -821,7 +821,7 @@ section .container {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-    background: #18d26e;
+    background: #dc3545;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -921,7 +921,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-    color: #63eda3;
+    color: #f30017;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -1017,7 +1017,7 @@ section .container {
 }
 
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #18d26e;
+    background-color: #dc3545;
 }
 
 
@@ -1034,7 +1034,7 @@ section .container {
 
 .contact .info-box i.bx {
     font-size: 24px;
-    color: #18d26e;
+    color: #dc3545;
     border-radius: 50%;
     padding: 14px;
     float: left;
@@ -1071,7 +1071,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-    color: #18d26e;
+    color: #dc3545;
 }
 
 .contact .php-email-form {
@@ -1095,7 +1095,7 @@ section .container {
 .contact .php-email-form .sent-message {
     display: none;
     background: rgba(255, 255, 255, 0.08);
-    background: #18d26e;
+    background: #dc3545;
     text-align: center;
     padding: 15px;
     font-weight: 600;
@@ -1115,7 +1115,7 @@ section .container {
     width: 24px;
     height: 24px;
     margin: 0 10px -6px 0;
-    border: 3px solid #18d26e;
+    border: 3px solid #dc3545;
     border-top-color: #eee;
     -webkit-animation: animate-loading 1s linear infinite;
     animation: animate-loading 1s linear infinite;
@@ -1158,7 +1158,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit] {
-    background: #18d26e;
+    background: #dc3545;
     border: 0;
     padding: 10px 30px;
     color: #fff;
@@ -1167,7 +1167,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-    background: #15bb62;
+    background: #dc3545;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1214,10 +1214,10 @@ section .container {
 }
 
 .credits a {
-    color: #3DDB59;
+    color: #dc3545;
     transition: 0.3s;
 }
 
 .credits a:hover {
-    color: #35e888;
+    color: #f30017;
 }
