--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1035,14 +1035,14 @@ section .container {
 
 .contact .info-box h3 {
     font-size: 20px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgb(255, 255, 255);
     font-weight: 700;
     margin: 10px 0 8px 68px;
 }
 
 .contact .info-box p {
     padding: 0;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.9);
     line-height: 24px;
     font-size: 14px;
     margin: 0 0 0 68px;
@@ -1056,7 +1056,7 @@ section .container {
 .contact .info-box .social-links a {
     font-size: 18px;
     display: inline-block;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.9);
     line-height: 1;
     margin-right: 12px;
     transition: 0.3s;
